# internal/adapter/handler/http/v1/tag.go
@@ -6,6 +6,7 @@ import (
 	"net/http"
 
 	"github.com/answersuck/host/internal/domain/tag"
+	"github.com/answersuck/host/internal/pkg/pagination"
 	"github.com/go-chi/chi/v5"
 	"go.uber.org/zap"
 )
@@ -26,31 +27,40 @@ func newTagMux(d *Deps) *chi.Mux {
 	m := chi.NewMux()
 	verificator := mwVerificator(d.Logger, &d.Config.Session, d.SessionService)
 
-	m.Get("/", h.getAll)
+	m.Post("/list", h.getAll)
 	m.With(verificator).Post("/", h.createMultiple)
 
 	return m
 }
 
+type tagGetAllResponse struct {
+	Result  []tag.Tag `json:"result"`
+	HasNext bool      `json:"has_next"`
+}
+
+func (h *tagHandler) getAll(w http.ResponseWriter, r *http.Request) {
+	var req pagination.CursorParams
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		h.log.Info("http - v1 - tag - getAll - RequestBody", zap.Error(err))
+		writeErr(w, http.StatusBadRequest, err)
+		return
+	}
+
+	tagList, err := h.service.GetAll(r.Context(), tag.NewListParams(req.LastId, req.Limit))
+	if err != nil {
+		h.log.Error("http - v1 - tag - getAll - h.service.GetAll", zap.Error(err))
+		w.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	writeJSON(w, http.StatusOK, tagList)
+}
+
 type tagCreateMultipleReq struct {
 	Tags []struct {
 		Name       string `json:"name" binding:"required,gte=1,lte=32"`
-		LanguageId uint32 `json:"language_id" binding:"required"`
+		LanguageId uint8  `json:"language_id" binding:"required"`
 	} `json:"tags" binding:"required,min=1,max=10"`
-}
-
-func (r *tagCreateMultipleReq) toTagList() ([]tag.Tag, error) {
-	b, err := json.Marshal(r.Tags)
-	if err != nil {
-		return nil, err
-	}
-
-	var tags []tag.Tag
-	if err = json.Unmarshal(b, &tags); err != nil {
-		return nil, err
-	}
-
-	return tags, nil
 }
 
 func (h *tagHandler) createMultiple(w http.ResponseWriter, r *http.Request) {
@@ -61,14 +71,13 @@ func (h *tagHandler) createMultiple(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	t, err := req.toTagList()
-	if err != nil {
-		h.log.Error("http - v1 - createMultiple - req.toTagList", zap.Error(err))
-		w.WriteHeader(http.StatusInternalServerError)
-		return
+	t := make([]tag.Tag, 0, len(req.Tags))
+	for _, rt := range req.Tags {
+		t = append(t, tag.Tag{
+			Name:       rt.Name,
+			LanguageId: rt.LanguageId,
+		})
 	}
-
-	h.log.Error("TEST", zap.Any("tags", t))
 
 	tags, err := h.service.CreateMultiple(r.Context(), t)
 	if err != nil {
@@ -79,17 +88,6 @@ func (h *tagHandler) createMultiple(w http.ResponseWriter, r *http.Request) {
 			return
 		}
 
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-
-	writeJSON(w, http.StatusOK, listResponse{tags})
-}
-
-func (h *tagHandler) getAll(w http.ResponseWriter, r *http.Request) {
-	tags, err := h.service.GetAll(r.Context())
-	if err != nil {
-		h.log.Error("http - v1 - tag - getAll - h.service.GetAll", zap.Error(err))
 		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
